# Dense-Scene-Matching

./: .gitignore  readme.md
configs/: 7scenes.yaml  cambridge.yaml
libs/dataset/: dataset.py
libs/engine/: launcher.py  tester.py  trainer.py
libs/model/: basic.py  geometry.py
libs/model/arch/: DSMNet.py
libs/model/backbone/: backbone_base.py  fpn.py  resnet.py
libs/model/backbone/wrapper/: __init__.py  batch_norm.py  wrappers.py
libs/model/head/: __init__.py  head.py
libs/model/ops/: setup.py
libs/model/ops/correlation/functions/: corr.py
libs/model/ops/correlation/modules/: corr.py
libs/model/ops/correlation/src/: corr_cuda.cpp  corr_cuda_kernel.h  corr_proj.cpp  corr_proj.h  corr_proj_kernel.cu
libs/model/ops/nms/functions/: nms.py
libs/model/ops/nms/modules/: nms.py
libs/model/ops/nms/src/: nms.cpp  nms.h  nms_kernel.cu
libs/utils/: base.py  geometry.py  logger.py  reader.py  transform.py
libs/utils/lm_pnp/: CMakeLists.txt  cnn copy.h  cnn.h  types.h  util.h
libs/utils/lm_pnp/.ipynb_checkpoints/: lm_pnp-checkpoint.py  lm_pnp_interface-checkpoint.cpp
tools/: train_net.py  video_test.py
